tests/rosetta/out/Pascal/bitmap-b-zier-curves-cubic.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/bitmap-b-zier-curves-cubic.pas
bitmap-b-zier-curves-cubic.pas(24,26) Error: Incompatible types: got "Int64" expected "TFPGMap<System.ShortString,System.Variant>"
bitmap-b-zier-curves-cubic.pas(27,14) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "LongInt"
bitmap-b-zier-curves-cubic.pas(32,78) Error: Identifier not found "any"
bitmap-b-zier-curves-cubic.pas(32,81) Error: Type identifier expected
bitmap-b-zier-curves-cubic.pas(52,25) Error: Identifier not found "_appendList"
bitmap-b-zier-curves-cubic.pas(52,49) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
